--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 document.getElementById("data").innerHTML = table;
             }
         };
-        xhttp.open("GET", "baza/baza.xml", true);
+        xhttp.open("GET", "baza.xml", true);
         xhttp.send();
     </script>
 </body>
