--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Data from XML</h1>
+        <h1>Data from XML1</h1>
         <table class="table">
             <thead>
                 <tr>
@@ -45,7 +45,7 @@
                 document.getElementById("data").innerHTML = table;
             }
         };
-        xhttp.open("GET", "baza.xml", true);
+        xhttp.open("GET", "../baza.xml", true);
         xhttp.send();
     </script>
 </body>
