--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Data from XML1</title>
 </head>
-<body>
+<body>nowy
     <div class="container">
         <h1>Data from XML1</h1>
         <table class="table">
