--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body onload="loadTrenerzy()">
   <h1>Strona główna</h1>
+  <button onclick="sortTable(0)">Sortuj po Id trenera</button>
+  <button onclick="sortTable(1)">Sortuj po Imieniu trenera</button>
+  <button onclick="sortTable(2)">Sortuj po Nazwisku trenera</button>
   <table id="table-trenerzy"></table>
 </body>
 </html>
