--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body onload="loadTrenerzy()">
   <h1>Strona główna</h1>
+  <button onclick="addRecord()">Dodaj rekord</button>
   <table id="table-trenerzy">
     <tr>
       <th onclick="sortTable(0)">Id Trenera</th>
